# flappy_bird

./: .gitignore  LICENSE  MANIFEST.in  README.md  flappy_bird.py  pyproject.toml  requirements.txt  setup.cfg  setup.py  tox.ini
.github/workflows/: ci.yml  cross-platform.yml  publish.yml
.qwen/skills/: python-coder.md
src/flappy_bird/: __init__.py  bird.py  constants.py  flappy_bird.py  game.py  graphics.py  heart.py  pipe.py  setup.py  sounds.py
tests/: test_flappy_bird.py
